syntax = "proto3";

package jnsaf_server;
option java_package = "org.argus.jnsaf.server";

import "nativedroid/protobuf/summary.proto";

message LoadAPKRequest {
    bytes buffer = 1;
}

message LoadAPKResponse {
    string apk_digest = 1;
    int32 length = 2;
}

message TaintAnalysisRequest {
    string apk_digest = 1;
}

message TaintAnalysisResponse {
    bool status = 1;
}

message GetSummaryRequest {
    string apk_digest = 1;
    string signature = 2;
    bool gen = 3;
    int32 depth = 4;
}

message GetSummaryResponse {
    jawa_summary.HeapSummary heap_summary = 1;
    string taint_result = 2;
}

service JNSaf {
    rpc LoadAPK(stream LoadAPKRequest) returns (LoadAPKResponse) {}
    rpc TaintAnalysis(TaintAnalysisRequest) returns (TaintAnalysisResponse) {}
    rpc GetSummary(GetSummaryRequest) returns (GetSummaryResponse) {}
}